# multimodalOPD

./: .gitignore  CLAUDE.md  PROGRESS_OPD.md  README.md  README_OPD.md  pyproject.toml
baseline/: __init__.py  opd_data_collator.py  opd_dataset.py  opd_losses.py  opd_trainer.py  serve_teacher.py  teacher_client.py  train_opd.py  train_opd_anchor.py  train_opd_evidence.py  train_opd_evidence_slot.py  train_opd_hint.py  train_opd_locate.py  train_opd_tam.py
baseline/anchor/: __init__.py  (+3 more)
configs/: accelerate_zero2_gpu_8.yaml  accelerate_zero2_gpu_8_ga1.yaml  accelerate_zero2_lora_gpu_8.yaml
docs/: OPD_BASELINE_PLAN.md  README.md  index.html
scripts/: coldstart_locate_qwen3_2b.sh  eagle_g0.sh  eagle_g0_multi.sh  eagle_g0_viz.sh  eagle_g0_viz_multi.sh  eval_lmms_aligned.sh  eval_mmvp.sh  eval_opd.sh  eval_opd_multi.sh  eval_suite.sh  eval_vigos.py  eval_vigos.sh  eval_vqa.sh  eval_vstar.sh  g0_diag.sh  g0_diag_multi.sh  judge_suite.sh  merge_lora.py  probe_stage0.sh  probe_stage0_all.sh  serve_teacher_vllm.sh  train_opd.sh  train_opd_anchor.sh  train_opd_evidence_qwen25_3b.sh  train_opd_evidence_slot_qwen3_2b.sh  train_opd_hint_qwen35_9b_to_2b.sh  train_opd_hint_qwen3_2b.sh  train_opd_locate_qwen3_2b.sh  train_opd_qwen25_3b.sh  train_opd_qwen35_9b_to_2b.sh  train_opd_qwen3_8b_to_2b.sh  train_opd_tam_qwen3_8b_to_2b.sh  train_vigos_qwen25_3b.sh  train_vigos_qwen25_7b.sh
vigos/: answer_utils.py  data_collator.py  dataset_utils.py  eval_benchmarks.py  eval_utils.py  losses.py  train_vigos.py  trainer.py
验证/: README.md  compare_bbox_prompt.py  validate_by_id.ipynb
(+91 files in other folders)
