[project]
name = "vigos"
version = "0.1.0"
description = "ViGOS training and evaluation code for multimodal reasoning"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "accelerate==1.11.0",
    "bitsandbytes==0.48.2",
    "datasets==3.6.0",
    "deepspeed==0.18.2",
    "einops==0.8.1",
    "huggingface-hub>=0.30.0",
    "mathruler==0.1.0",
    "numpy==2.1.2",
    "openai>=1.0.0",
    "packaging>=24.0",
    "peft==0.17.1",
    "pillow>=10.4.0",
    "pylatexenc==2.10",
    "qwen-vl-utils==0.0.14",
    "safetensors==0.5.3",
    "sentencepiece==0.1.99",
    "tiktoken==0.9.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.57.1",
    "trl==0.26.0",
    "vllm==0.11.0",
    "wandb==0.22.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py311"
